--- a/ads/righteousrecipiesad.html
+++ b/ads/righteousrecipiesad.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><!-- saved from url=(0061)http://www.loveexpressonline.com/ads/righteousrecipiesad.html -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><!-- saved from url=(0061)http://www.loveexpressonline.com/ads/righteousrecipiesad.html -->
+
 
 <html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="../Templates/ad_space.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
@@ -19,7 +20,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="righteousrecipesad.jpg" width="950" height="613" alt="Righteous Recipies" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><a href="righteousrecipesad.jpg"><img src="righteousrecipesad.jpg" width="1000" height="647" alt="Click for Larger image" /></a><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
