--- a/events.html
+++ b/events.html
@@ -109,61 +109,52 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
+                  <img src="images/nubian-gents.jpg" alt="The Nubian Gents" title="The Nubian Gents" name="authorpic" width="123" height="85" id="authorpic" /><br>
     </div>
-                <h2>Last Minute Tax Help!</h2>
-                <p>Looking  for ways to avoid the last-minute rush in preparing your taxes? Then here are  the top Six Golden Rules to help you navigate this last minute journey<strong> </strong>...<a href="donaldreid.html">Read More</a><br>
+                <h2>Arise NY - Family Fun in the Park</h2>
+                <p><strong>Arise New York </strong>presents <strong>Family Fun  in the Park</strong>; Concert and Fa&shy;mi&shy;ly Fun Activities,<strong> Sun&shy;day, May 3rd, 11am-3pm</strong> and <strong>Saturday, August 15th, 11am -3pm </strong>@ <strong>Central Park Naum&shy;burg Bandshell</strong> (Mid-Park from 66th to  72nd Street, NYC).<strong> </strong>...<a href="arise-new-york-family-fun-in-the-park-may-3rd-august-15th.html">Read More</a><br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/worship-night-in-america-with-chris-tomlin.jpg" alt="" name="authorpic2" width="64" height="85" id="authorpic3" /><br>
+    </div>
+                <h2>Worship Night America</h2>
+                <p><strong>Chris Tomlin</strong> presents <strong>Worship Night in America</strong> <strong>Satur&shy;day, August 8th, 7pm</strong> with <strong>Chris</strong> <strong>Tomlin</strong>, <strong>Louie</strong> <strong>Gi&shy;glio</strong>, <strong>Max</strong> <strong>Lucado</strong>, <strong>Matt Redman</strong>, <strong>Kari</strong> <strong>Jobe</strong>, <strong>Matt Maher</strong>, <strong>Reuben</strong> <strong>Morgan</strong> and <strong>Rend</strong> <strong>Collective</strong> @ Madison Square Garden Arena,<strong> </strong>...<a href="worship-night-america-chris-tomlin.html">Read More</a><br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/bridgefest-2015-poster.jpg" alt="" name="authorpic" width="140" height="85" id="authorpic5" /><br>
+    </div>
+                <h2>BridgeFest 2015</h2>
+                <p>Join us  for <b>Bridgefest 2015, Friday-Sa&shy;tur&shy;day,  June 26th &amp; 27th</b> @ Ocean Grove, New Jer&shy;sey. This year  our Friday night artist is <b>Shane &amp;  Shane</b>. The <b>concert</b> will begin @ <b>6:30pm</b>. Saturday is an All Day Beach  Day! Enjoy the beach and so many fun  <strong> </strong>...<a href="bridgefest-2015.html">Read More</a><br>
+              </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/acker-family-henry-wife-genevieve-rose-edith-and-baby-henry-jr-acker.jpg" name="authorpic" width="69" height="85" id="authorpic7" /><br>
+  </div>
+                <h2>Viewpoint</h2>
+                <p>On our way  from the Bronx by subway to Manhattan to the Path trains to Newark, then took  the bus up to South Orange Avenue to Newark/  Vailsburg, West End Avenue to Mom&rsquo;s family<strong> </strong>...<a href="viewpoint.html">Read More</a><br>
                   <br>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="authors/jimbiscardi.jpg" alt="Jim Biscardi Jr" name="authorpic" width="68" height="85" id="authorpic2" /><br>
+                  <img src="images/donaldreid.jpg" alt="" width="57" height="75" /><br>
     </div>
-                <h2>Great Commission &quot;Mantle&quot; Leaders</h2>
-                <p>For many  years as a workplace leader, I was responsible  for leading and growing 25 subordinate supervisors who led and trained their  people. Also, as President of New Jersey Christian Ministries (NJCM) from 2000  &ndash; 2011, the Lord gave us hundreds of instructors and exhibitors who mentored  Convention attendees and  <strong> </strong>...<a href="great-commission-mantle-leaders.html">Read More</a></p>
+                <h2>Grants for NYCHA Residents</h2>
+                <p>James  Monroe Residents Association of the New York City Housing Authority received a  &ldquo;birthday gift&rdquo; of tens of thousands in grants courtesy various elected  officials to celebrate the receipt of their Federal Tax Exempt Status<strong> </strong>...<a href="donaldreid-grants-for-nycha-residents.html">Read More</a><br>
+                </p>
                 <div id="articlepic">
                   <div class="photocredits"> </div>
                   <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
-                </div>
+              </div>
                 <h2>Focus On The Children: </h2>
-                <p>A loving HUG, yes HUG is part of our  real demonstration of love, warm, kindness, compassion. Have you given anyone a  real HUG lately? Not one of those quickie sloppy agape &ldquo;gotta go&rdquo; fake  embraces. Let&rsquo;s just keep it real. Yuck, Yuck, Yuck!!!<strong> </strong>...<a href="focuson.html">Read More</a>                </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <br>
-</div>
-                <h2>Oasis Singles All Day Conference </h2>
-                <p>You&rsquo;re  invited to join Christian singles of all ages, from all denominations and from  all walks of life from throughout the tri-state area for a life-changing  conference featuring teaching, worship and <strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/pastor-matthew-singh-sm.jpg" alt="Pastor Matthew &amp; Ka&shy;thy Singh" width="73" height="75" /><br>
-    </div>
-                <h2>Principles For Lasting Change</h2>
-                <p>One of the  universal desires of human beings is  the desire to improve. It&rsquo;s universal. We all want to grow. We all want to get  better. We all want to improve. We all want to  make something better of our lives<strong> </strong>...<a href="matthew-singh-pinciples-for-lasting-change.html">Read More</a></p>
+                <p>A loving HUG, yes HUG is part of our  real demonstration of love, warm, kindness, compassion. Have you given anyone a  real HUG lately? Not one of those quickie sloppy agape &ldquo;gotta go&rdquo; fake  embraces. Let&rsquo;s just keep it real. Yuck, Yuck, Yuck!!!<strong> </strong>...<a href="focuson.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img style="float:right;" src="images/revival-celebration-2015-matthew-singh.jpg" alt="Pastor Matthew &amp; Ka&shy;thy Singh" width="55" height="85" /><br>
-    </div>
-                <h2>The Easter Mission</h2>
-                <p> <b>Start  believing God&rsquo;s dream for Your  life.</b> <i>It all starts with a dream.</i> It all starts with vision, an idea. What does God want to do in my life? First,  Ephesians 3:20. <i>&ldquo;God, by His mighty power  at work with&shy;in us, is able to do <b>far  more than we would ever dare to ask</b> or even dream of - infinitely beyond  our highest prayers </i><strong> </strong>...<a href="the-easter-mission.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/mark-schultz.jpg" alt="" name="authorpic" width="75" height="75" id="authorpic4" /><br>
-    </div>
-                <h2>Mark Schultz Concert</h2>
-                <p>An Evening  with <strong>Mark Schultz in Concert, Thursday, April 30, 2015 7:00pm</strong> @ the <strong>Princeton High School Performing Arts  Center</strong>, 151 Moore Street, Prince&shy;ton, New Jer&shy;sey 08540<strong> </strong>...<a href="mark-schultz-concert.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/PastorJEMcCullough.jpg" alt="" name="authorpic" width="52" height="75" id="authorpic6" /><br>
-    </div>
-                <h2>Simply Sacred</h2>
-                <p>Announcing  the <strong>Con&shy;secration </strong>of the <strong>Rev. </strong><strong>Dr. Jacqueline E. McCullough</strong> to the <strong>Bi&shy;shop&shy;ric</strong>. <strong>Consecration  Service: Friday, August 14th, 7pm</strong> @ <strong>Agape  Family Worship Center,</strong> 501 E. <strong> </strong>...<a href="simply-sacred-mccullough.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/rose-and-pastor-stranges.jpg" width="66" height="75" alt="Pastor Stranges with Rose Lictro"><br>
-    </div>
-                <h2> Viewpoint:  	 March for Jesus!! </h2>
-                <p>Believers  can you ima&shy;gine a Worldwide March for Jesus. Coming together from every  nation, country, and across oceans, to march. Millions of believers carrying  banners, flags of their country, sing&shy;ing<strong> </strong>...<a href="roselictro.html">Read More</a>                </p>
-                <p>&nbsp;</p>
+  </div>
+                <h2>Celebrate Moms </h2>
+                <p>Proverbs  6:20-22&nbsp; &ldquo;My son, keep your father&rsquo;s  command and do not for-sake your mother&rsquo;s teaching. Bind them always on your  heart; fasten them around your neck.&nbsp;  When you walk, they will guide you; when you sleep, they will watch over  you; when you awake they <strong> </strong>...<a href="matthew-singh-celebrate-moms-this-year-with-music-food-and-lots-of-love.html">Read More</a></p>
                 
               </div>
             </div>
