--- a/features.htm
+++ b/features.htm
@@ -135,21 +135,40 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bishop-mattera-headshot.jpg" alt="Bishop Joseph Mattera " name="authorpic" width="58" height="85" id="authorpic" /></div>
-                <h2>Courtship and Dating</h2>
-                <p>Courtship  and dating are some of the least discussed topics in the church. Yet dating has  caused the most havoc, destroyed countless lives, resulted in unwanted pregnan-  cies and abortions, and even split churches apart. Since most of the church  doesn&rsquo;t teach on this subject, a va&shy;cuum exists ...<a href="courtship-and-dating.html">Read More</a>
+                  <img src="ads/chris-white.jpg" width="57" height="85" alt="Christopher N. White"></div>
+                <h2>Escape from the Holocaust</h2>
+                <p>In  November 1979, I entered St. Vincent&rsquo;s Hospital on 14th Street in  Man- hattan for my first major knee surgery,  the first of what would eventually be a series of nine surgical procedures. I  was aware that what was ahead would not be pleasant, but knew it was necessary if I wanted to walk  ...<a href="escape-from-the-holocaust.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/scott-caesar.jpg" alt="" name="authorpic" width="116" height="85" id="authorpic4" /></div>
-                <h2>Male by Birth, 
-Man by Choice</h2>
-                <p>In the  thirteenth chapter of 1Corithians, God inspires and Paul writes to males who  believe they are men. &ldquo;When I was a child I used to speak as a child, think  like a child, reason as a child. When I became a man, I did away with childish  things&rdquo;. 1Corinthians 13:11 ...<a href="male-by-birth-man-by-choice.html">Read&nbsp;More</a>
+                  <span style="background-color:#FFF; padding:10px;"><img src="images/logo-young-life.jpg" alt="" name="authorpic3" width="119" height="85" id="authorpic3" /></span></div>
+                <h2>Young Life A Model Ministry </h2>
+                <p>New York  City is known as the biggest metro&shy;polis with the brightest lights and greatest  op- portunity. Yet beyond the veneer, there are more than 2 million kids living  in the city under the age of 18 who aren&rsquo;t looking for their next career break,  but for deeper meaning and purpose ...<a href="young-life-a-model-ministry-for-reaching-nyc-s-most-disconnected-youth.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/dr-dale-irvin.jpg" alt="" name="authorpic5" width="57" height="85" id="authorpic5" /><img src="images/dr-pauldevries.jpg" width="73" height="85" alt="Paul de Vries"></div>
-                <h2>New York Theological Seminary and New York Divinity School</h2>
-                <p>President <strong>Dale T. Irvin</strong> of <strong>New York Theolo&shy;gi&shy;cal Se&shy;minary (NY TS)</strong> and President <strong>Paul de Vries</strong> of <strong>New York Divinity School (NYDS)</strong> announced this month that the two  schools have entered into a new partnership intended to broaden the  opportunities candidates  ...<a href="new-york-theological-seminary.html">Read More</a>
+                  <img src="images/bishop-w-l-bonner-head-shot-to-be-used-in-may-article.jpg" alt="Bishop Willliam Lee Bonner" name="authorpic" width="59" height="85" id="authorpic7" title="Bishop Willliam Lee Bonner" /></div>
+                <h2>Bishop William Lee Bonner</h2>
+                <p><strong>Bishop William Lee Bonner</strong>, beloved  pastor of the renowned <strong>Greater Refuge  Temple Church</strong> (GRT) in Harlem and Chief Apostle of the Church of Our Lord  Jesus Christ (COOLJC), has made his transition from labor to great reward on  Good Friday, April 3rd; it was announced by church officials. He  ...<a href="courtship-and-dating.html">Read More</a>
 <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/newtongabbidon.jpg" title="Rev. Newton Gabiddon" alt="Rev. Newton Gabiddon" name="authorpic" width="74" height="85" id="authorpic8" /></div>
+                <h2>8th Annual Pastor&rsquo;s &amp; Leaders&rsquo; Symposium</h2>
+                <p><strong>Intercessory Prayer Mi&shy;nistry Int&rsquo;l</strong> in  associa&shy;tion with <strong>Concerts  of Prayer Greater NY</strong> presents <strong>8th  Annual Pastors&rsquo; &amp; Lea&shy;ders&rsquo; Prayer Sympo&shy;si&shy;um</strong> <strong><em>Godly  Leadership in Dan&shy;gerous Times</em></strong>. Date: <strong>Fri&shy;day, May 22nd, 9am&ndash; 12:30pm</strong> Spea&shy;ker: <strong>Rev. Dimas Sa&shy;la&shy;be&shy;rios</strong>, ...<a href="8th-annual-pastor-s-leaders-symposium.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+</div>
+                <h2>NY-NJ CityServe-CityFest </h2>
+                <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic10" /></div>
+                <h2>Protect Your Bones!</h2>
+                <p>Are your  bones in good health? Do you know how to take good care of them? If you&rsquo;re not  sure, this is a great time to learn about bone health, as May is Osteoporosis  Prevention Month. Osteoporosis is a condition that thins and wea&shy;kens bones,  increasing risk of fractures. It is a silent disease ...<a href="elizabethmadison-protect-your-bones.html">Read More</a>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /></div>
+                <h2>Focus On The Children</h2>
+                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an interesting perspective  ...<a href="focuson.html">Read More</a>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/central-park.jpg" alt="" height="75" /></div>
                 <h2>Vision For New York City<br>
@@ -157,28 +176,10 @@ Man by Choice</h2>
                 <p>It started with one small group of Latino  leaders and a simple invitation. They were eager to have Luis Palau and his  team help lead an evangelistic effort reaching  the Tri-State area. Within a few more ...<a href="vision-for-new-york-city.html">Read More</a>                
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/robertstearns.jpg" alt="" name="authorpic" width="62" height="75" id="authorpic2" /><br>
-          </div>
-                <h2>Turning The Tide </h2>
-                <p><strong>Turning the Tide Con&shy;ference, April 24th-25th,  (Friday:6pm; Sa&shy;turday:8:30am)</strong>. This youth and young adults  conference is a gathering of hundreds of young people who are crying out for  God to       ...<a href="turning-the-tide-youth-young-adults-conference.html">Read More</a>                
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/kenneth-and-gloria-copeland.png" alt="" name="authorpic9" width="99" height="75" id="authorpic9" /><br>
-        </div>
-                <h2>Living Victory</h2>
-                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a>
-<div id="articlepic">
-  <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison2.jpg" alt="Elizabeth Madison" name="authorpic" width="74" height="85" id="authorpic6" /><br>
       </div>
-                <h2>Should You Eat Organic?</h2>
-                <p>It seems  almost every day a client asks me questions about organic foods: should I only  eat organic foods? Is non-organic food dangerous? What if I can&rsquo;t afford  organic food, should I just not buy any fruits and vegetables? There is a lot  of confusing information in the media about organic foods, and at times, a lot  of it is just hype. So to help my clients     ...<a href="elizabethmadison.html">Read More</a>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/dimassalaberriosgreyheadshot.jpg" width="67" height="75" alt="Dimas Salaberrios"><br>
-        </div>
-                <h2>Slow Down Pastors</h2>
-                <p>The demands on New York City Pastors are relentless. Manhattan is the most influential island in the world and in every survey the first or second most influential city (only second to London at      ...<a href="slow-down-pastors.html">Read More</a></div>
+                <h2>Living Victory</h2>
+                <p>Join <strong>Kenneth &amp;  Gloria Copeland</strong> of <strong>Kenneth Copeland  Ministries&nbsp; </strong>for our <strong>Living Victory New York Faith Encounter</strong> on <strong>Friday-Saturday, Septem&shy;ber 11th-12th</strong> @ the New York Marriott Marquis       ...<a href="living-victory-copeland.html">Read More</a></div>
             </div>
           <!--SECTION LEFT BEGIN-->
           <div id="section_left" style="float:left;"></div>
