--- a/worship-night-america-chris-tomlin.html
+++ b/worship-night-america-chris-tomlin.html
@@ -2,18 +2,12 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Welcome to The Love Express</title>
+<title>Worship Night America - Chris Tomlin</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="main2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" -->
-<style type="text/css">
-<!--
-.style3 {font-weight: bold}
--->
-</style>
-<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 <style type="text/css">
 <!--
 body {
@@ -61,7 +55,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
           <div id="cat_borderleft"></div> 
           <!-- InstanceBeginEditable name="pagelabel" -->
       <div class="style1" id="cat_lable">
-        <p class="pageheadertxt">Classifieds</p>
+        <p class="pageheadertxt">events</p>
       </div>
       <!-- InstanceEndEditable --> 
           <div id="cat_border"></div> 
@@ -81,46 +75,18 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div id="articlepic"> </div>
-              <p class="editorsnote">We can help your business do more business on the website as well as the print edition. Online Classified Ads attract tens of thousands of consumers and retailers everyday. For an introductory price, any classified ad placed in the print edition will be included on the website. The Love Express online is becoming the fastest growing newspaper online since its inception the web has gained numerous reviews. </p>
-              <div id="classifieds">
-                <p class="qa"><strong>Experienced Musician</strong></p>
-                <p><strong>Experienced musician available</strong>. 
-                  Plays organ, keyboard and praise.  References available call <strong>718-669-4239</strong></p>
-<p class="qa">Organ Sales and Repair </p>
-                <p><strong> Hammond Organ Sales and Repairs.</strong> Authorized Hammond Organ and Leslie Speaker Dealer.  All musical instruments available. 516-377-7907. <a href="http://www.scottrussmusic.com " target="_blank">www.scottrussmusic.com </a></p>
-                <p class="qa">Artech Church Interiors</p>
-                <p><strong>Pew upholstery, Refinishing &amp; Repairs</strong>. New pews, cushioned church chairs, pulpit furniture, Replace carpet, lighting, painting &amp; full church design &amp; renovation. 100% financing available. Call <strong>1-800-222-Pews (7397)</strong> free Estimates.<a href="http://www.artechchurchInteriors.com"><strong> www.artechchurchInteriors.com</strong></a>.</p>
-                <p class="qa">Church space for rent</p>
-                <p><strong>1200 sq. ft. fully furnished</strong>; Bronx, Saturday 9am-6pm; Sundays 8am-11am and 3:30pm-7pm. 646-204-0602</p>
-                <p class="qa">Church Secretary Available</p>
-                <p><strong>Church Secretary &amp; Web Designer available</strong>, P/T. Typing, church bulletins, labels, celebrations etc. <strong>347-845-2591</strong>.</p>
-                <p class="qa">For Sale</p>
-                <p><strong>For sale</strong> by The Revelation  Church, Brooklyn, NY 11233: A 1998<strong> Ford E350 21 passenger Bus</strong>, in good condition. Please contact Shawn Watkins for further information<strong> (347) 239-1761</strong>.</p>
-                <p class="qa">Help Wanted</p>
-                <p>I<strong>f you know of anyone who is interested with the skills and training in food service</strong>, then NYSUM just might be the place God is leading you to. The way to apply is to log onto our website at: <a href="http://www.nysum.org"><strong>www.nysum.org</strong></a>, down load an application and fax it to our Food Service Manager, Mrs. Darleen DeArruda. Fax number:<strong> 718-204-6471</strong> or email it to:<a href="mailto: foodservice@nysum.org"><strong> foodservice@nysum.org</strong></a>.                </p>
-                <p class="qa">Lessons</p>
-                <p><strong>Keyboard Instruction</strong>; allages. Call Avant at Cell <strong>347-264-3483</strong>.<br>
-                </p>
-                <p class="qa">Musician Available</p>
-                <p><strong>Experienced musician available</strong>. Plays Organ and Keyboard. Versatile in traditional &amp; Contemporary music, references available call <strong>917-745-6811</strong>.</p>
-                <p class="qa">Organ Service/Parts</p>
-                <p><strong>Hammond B, C, -3 Organs for sale</strong>. Authorized Leslie Speaker, Parts, Hammond Parts Dealer. Serious callers only <strong>718-464-0952</strong>.</p>
-                <p><strong>Hammond Organ Repair</strong>: Experienced technician. Meticulous workmanship. Competitive prices. Specialize in organ and Leslie speaker rebuilding and modifications. www.jporganservice.com. <strong>212-942-2437</strong>.</p>
-                <p><strong>Hammond Organ Leslie speakers</strong>, modification, parts, purchases rebuilding, rentals, sales, service calls and lessons. Call <strong>718-464-0952</strong>.</p>
-                <p class="qa">Rentals</p>
-                <p><strong>Fully furnished</strong> (Pa system, projector, keyboard, drum set etc.) <strong>church space</strong> available<strong> in Brooklyn</strong> on Atlantic Avenue bet. Bradford and Miller Avanue close to subway and buses, plenty of street parking please call <strong>917-547-5393</strong>.</p>
-                <p><strong>Church Space Available</strong> Sundays: 8am-7:00pm; All weekday hours. Call <strong>917-838-2372</strong>.</p>
-                <p class="qa">Soloist Available</p>
-                <p><strong>Dynamic, Gospel Jewel Soloist</strong> for church programs<strong> 718-291-4982</strong>. I am now on Facebook at Universal Church of God, Inc.</p>
-                <p class="qa">Video Productions</p>
-                <p><em>Tab Camp Digital Video &amp; Photography Ministries</em>; Specializing in Church fuctions: Concerts, Consecrations, Ordinations, Gospel plays, Baptisms or any Church services, Weddings &amp; Sweet 16 celebrations.<strong> 917-204-6719</strong>. Video recorded in high defination is available.</p>
-                <p class="qa">United Prayer</p>
-                <p><strong>Calling all intercessors, prayer warriors, ministers of the gospel, apostles, prophets, pastors, teachers to the Upper Room</strong>, 1710 Eastern Parkway every Saturday morning at 7:00 for United Prayer. Let us not hold our peace: For further information call <strong>888-231-9127</strong>.</p>
-                
-            </div>
-            </div>
-<!-- InstanceEndEditable --> 
+            <div><img src="images/chris-tomlin.jpg" alt="" name="authorpic" width="200" height="255" id="authorpic" />&nbsp;
+              <img src="images/worship-night-in-america-with-chris-tomlin.jpg" alt="" name="authorpic2" width="200" height="255" id="authorpic2" />            </div>
+            <h4 id="articleTitle">Worship Night America</h4>
+              <div id="authorname"><!--SECTION LEFT END-->
+ </div>
+              
+              <p><strong>Chris Tomlin</strong> presents <strong>Worship Night in America</strong> <strong>Satur&shy;day, August 8th, 7pm</strong> with <strong>Chris</strong> <strong>Tomlin</strong>, <strong>Louie</strong> <strong>Gi&shy;glio</strong>, <strong>Max</strong> <strong>Lucado</strong>, <strong>Matt Redman</strong>, <strong>Kari</strong> <strong>Jobe</strong>, <strong>Matt Maher</strong>, <strong>Reuben</strong> <strong>Morgan</strong> and <strong>Rend</strong> <strong>Collective</strong> @ Madison Square Garden Arena, New York, NY. Doors:  5:30pm. Tickets: Price Range: $35.00- $75.00</p>
+<p><strong><em>For more info visit www.christomlin.com/  worship-in-america</em></strong></p>
+
+              </div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
